[build-system]
requires=["hatchling"]
build-backend="hatchling.build"

[project]
name = "trie_gnolano"
version = "0.0.1"
authors = [
  { name="Gennaro Nolano", email="nolanogenn@gmail.com" },
]
description = "A small package for trie structures"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Nolanogenn/trie"
"Bug Tracker" = "https://github.com/Nolanogenn/trie/issues"
